# apollo

./: .gitignore  README.md  docker-compose-ci.yml  docker-compose.yml
.circleci/: config.yml
.envs/.local/: .django  .postgres  secret.example
.github/workflows/: dockerpublish.yml
apollo-crypto/: Cargo.toml
apollo-crypto/apollo-crypto-core/: Cargo.toml
apollo-crypto/apollo-crypto-core/src/: lib.rs
apollo-crypto/apollo-crypto-python/: .gitignore  Cargo.toml  README.md  pyproject.toml
apollo-crypto/apollo-crypto-python/apollo_crypto/: __init__.py
apollo-crypto/apollo-crypto-python/src/: lib.rs
apollo-crypto/apollo-crypto-wasm/: Cargo.toml  LICENSE  README.md
apollo-crypto/apollo-crypto-wasm/src/: lib.rs
apollo-crypto/apollo-crypto-wasm/www/: index.html  index.js  package-lock.json  package.json
backend/: manage.py  mypy.ini  poetry_to_pip.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_all_tests.sh  schema.yml  setup.cfg
backend/apollo/: asgi.py  settings.py  wsgi.py
backend/apollo/common/: permissions.py  serializers.py
backend/apollo/elections/: apps.py  crypto.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/apollo/elections/migrations/: 0001_initial.py  0002_remove_elections.py  0003_election_author.py  0004_add_votes_model.py  0005_election_state.py  0006_auto_20200406_1957.py  0006_frozen_to_closed.py  0007_auto_20200503_1557.py  0007_election_keys.py  0008_voterauthorizationrule.py  0009_election_visibility.py  0009_store_encrypted_vote.py  0010_auto_20200523_1734.py  0010_election_visibility.py  0011_seeds_voter_model.py  0012_voter_related_names.py
backend/apollo/elections/models/: __init__.py  answer.py  election.py  question.py  vote.py
backend/apollo/users/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apollo/users/migrations/: 0001_initial.py
backend/config/: asgi.py  runner.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py  test.py
backend/factories/: __init__.py  elections.py  users.py
backend/shared/templates/: redoc-ui.html  swagger-ui.html
backend/tests/: conftest.py
backend/tests/elections/: conftest.py  test_answers.py  test_crypto.py  test_elections.py  test_questions.py  test_voter_rules.py  test_votes.py  utils.py
backend/tests/users/: test_serializers.py
docker/local/backend/: Dockerfile  entrypoint.sh  start.sh
docker/local/base/: Dockerfile
docker/local/frontend/: Dockerfile
docker/production/backend/: Dockerfile
docker/production/frontend/: Dockerfile
frontend/: .eslintrc.js  README.md  app.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  App.vue  app.ts  custom.scss  main.ts
frontend/src/api/: elections.ts
frontend/src/components/: BulletinBoard.vue  ElectionDetail.vue  ElectionForm.vue  ElectionVoteForm.vue  ElectionsList.vue  HelloWorld.vue  NavBar.vue
frontend/src/crypto/: encryption.ts
frontend/src/router/: index.ts
frontend/src/server/: index.js
frontend/src/store/: index.ts
frontend/src/views/: BulletinBoardPage.vue  ElectionCreationPage.vue  ElectionDetailPage.vue  ElectionEditionPage.vue  ElectionResults.vue  ElectionsPage.vue  LandingPage.vue  Login.vue  Logout.vue  Signup.vue  Users.vue  VotePage.vue
k8s/base/: .env_base  01_middleware.yaml  02_services.yaml  03_deployments.yaml  04_ingress_routes.yaml  kustomization.yaml
nginx/: nginx.conf
