[package]
name = "apollo-crypto-python"
version = "0.1.0"
authors = ["Adam Budziak <adambudziak@protonmail.com>"]
edition = "2018"


[lib]
name = "apollo_crypto"
crate-type = ["cdylib"]

[dependencies]
apollo-crypto-core = { path = "../apollo-crypto-core", version = "0.1.0" }
base64 = "0.12"
curve25519-dalek = "2"

[dependencies.pyo3]
version = "0.9.2"
features = ["extension-module"]
