[build-system]
requires = ["maturin"]
build-backend = "maturin"

[tool.maturin]
manylinux = "1"

[tool.poetry]
name = "apollo-crypto-python"
version = "0.1.0"
description = ""
authors = ["Konrad Świerczyński <konrad.swierczynski@protonmail.com>", "Adam Budziak <adambudziak@protonmail.com>"]
license = "MIT"
